--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,10 @@
         <!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+		<form id="talkForm" method="post">
+			<input type="text" name="talk">
+			<input type="button" value="Submit" onclick="parseInput()"/>
+		</form>
 
         <script data-main="js/main" src="js/vendor/require.js"></script>
 
@@ -31,6 +35,5 @@
         </script>
 
 
-        <div id="info">Description</div>
     </body>
 </html>
