--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 		<form id="talkForm" method="post">
-			<input type="text" name="talk">
-			<input type="button" value="Submit">
+			<input type="text" name="talk" id="talkText">
+			<input type="button" value="Submit" id="talkButton">
 		</form>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
