Fixed structure but removed functions

--- a/app/index.html
+++ b/app/index.html
@@ -12,12 +12,12 @@
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="stylesheet" href="css/main.css">
-        <script data-main="index" src="js/vendor/require.js"></script>
     </head>
     <body>
         <!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <script data-main="app" src="js/vendor/require.js"></script>
 		<form id="talkForm" method="post">
 			<input type="text" name="talk" id="talkText">
 			<input type="button" value="Submit" id="talkButton">
