--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <script data-main="app" src="js/vendor/require.js"></script>
-		<form id="talkForm" method="post">
+		<form id="talkForm" autocomplete="off">
 			<input type="text" name="talk" id="talkText">
 			<input type="button" value="Submit" id="talkButton">
 		</form>
