--- a/app/index.html
+++ b/app/index.html
@@ -16,12 +16,14 @@
         <!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <script data-main="app" src="js/vendor/require.js"></script>
 		<form id="talkForm" autocomplete="off">
 			<input type="text" name="talk" id="talkText">
 			<input type="button" value="Submit" id="talkButton">
 		</form>
 
+		<script src="js/vendor/three.js"></script>
+		<script src="js/scripts/init.js"></script>
+		<script src="js/scripts/main.js"></script>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
