Sentiment still undefined

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
 		</form>
 
 		<script src="js/vendor/three.js"></script>
+		<script src="js/scripts/sentiment.js"></script>
 		<script src="js/scripts/init.js"></script>
 		<script src="js/scripts/main.js"></script>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
