--- a/app/index.html
+++ b/app/index.html
@@ -16,10 +16,9 @@
         <!--[if lt IE 10]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-		<form id="talkForm" autocomplete="off">
-			<input type="text" name="talk" id="talkText">
-			<input type="button" value="Submit" id="talkButton">
-		</form>
+		Talk to me:
+		<input type="text" name="talk" id="talkText" autocomplete=off>
+		<input type="button" value="Submit" id="talkButton">
 
 		<script src="js/vendor/three.js"></script>
 		<script src="js/scripts/sentiment.js"></script>
